# Infinite-zoom

./: CMakeLists.txt  README.md
.cache/clangd/index/: glfw3.h.A1572A47A2E68E09.idx  infvlk_app.cpp.BEEBC656831D0977.idx  infvlk_app.hpp.C69570EAA3504210.idx  infvlk_device.cpp.5C239709FAC7E7D5.idx  infvlk_device.hpp.1A3716257DA40808.idx  infvlk_pipeline.cpp.E35111EA75441C3E.idx  infvlk_pipeline.hpp.20BCA7166934CDCC.idx  infvlk_window.cpp.414DA6A3A55283C0.idx  infvlk_window.hpp.DF77EDE10230B87A.idx  infz_app.cpp.BFB2A6CE14D0A9BB.idx  infz_app.hpp.5764F76DD7125F13.idx  infz_vulkan.cpp.23FBCE47156679FC.idx  infz_vulkan.hpp.05B700B3017FDEE5.idx  infz_window.cpp.7C51509644346E01.idx  infz_window.hpp.F5B95FB782B9A3F3.idx  main.cpp.311596F61A2F4944.idx  vk_platform.h.BC38807A0846BE3D.idx  vulkan.h.7364EB7971E4A41C.idx  vulkan_core.h.77F1818FEEC3CF63.idx
dependencies/GLFW/: glfw3.h
dependencies/vulkan/: vk_enum_string_helper.h  vk_icd.h  vk_layer.h  vulkan.cppm  vulkan.hpp  vulkan_android.h  vulkan_core.h  vulkan_enums.hpp  vulkan_extension_inspection.hpp  vulkan_funcs.hpp  vulkan_handles.hpp  vulkan_hash.hpp  vulkan_profiles.hpp  vulkan_raii.hpp  vulkan_static_assertions.hpp  vulkan_to_string.hpp
dependencies/vulkan/utility/: vk_concurrent_unordered_map.hpp  vk_dispatch_table.h  vk_format_utils.h  vk_safe_struct.hpp  vk_safe_struct_utils.hpp  vk_small_containers.hpp  vk_sparse_range_map.hpp  vk_struct_helper.hpp
shaders/: test.frag  test.vert
src/: infz_app.cpp  infz_app.hpp  infz_vulkan.cpp  infz_vulkan.hpp  infz_window.cpp  infz_window.hpp  main.cpp
